# Math_Mentor_JEE

./: .env.example  .gitignore  EVALUATION.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
agents/: explainer_agent.py  guardrail_agent.py  parser_agent.py  refiner_agent.py  router_agent.py  solver_agent.py  verifier_agent.py
data/knowledge/: algebra_identities.md  applications_of_derivatives.md  bayes_theorem.md  binomial_theorem.md  combinatorics.md  common_mistakes.md  definite_integrals.md  derivatives.md  determinants.md  distributions.md  inequalities.md  integration_basics.md  limits.md  linear_systems.md  matrices.md  probability_basics.md  quadratic_equations.md  sequences_series.md
demo/: README.md  demo_questions.txt
memory/: store.py
rag/: embedder.py  retriever.py
tools/: sympy_tools.py
utils/: asr.py  ocr.py  trace.py
