[project]
name = "math-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "chromadb>=1.5.2",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "sympy>=1.14.0",
]
